fix minors issues

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -81,7 +81,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -89,7 +89,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -97,7 +97,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -105,7 +105,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -113,7 +113,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -121,7 +121,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -129,7 +129,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -137,7 +137,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -145,7 +145,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -153,7 +153,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
@@ -161,7 +161,7 @@
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
-                    <a href="#" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
             </div>
 
