--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
             <ul class="nav_list">
                 <li class="nav_item"><input type="search" placeholder="Tìm kiếm..." class="sbar"></li>
                 <li><i class="bx bx-search-alt search_btn"></i></li>
-                <li class="nav_item"><a href="#" class="nav_link active-link">Trang chủ</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Đơn hàng</a></li>
+                <li class="nav_item"><a href="./index.html" class="nav_link active-link">Trang chủ</a></li>
+                <li class="nav_item"><a href="./404.html" class="nav_link">Đơn hàng</a></li>
                 <li class="nav_item"><a href="./login.html" class="nav_link">Đăng nhập</a></li>
                 <li class="nav_item"><a href="./register.html" class="nav_link">Đăng kí</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Trợ giúp</a></li>
+                <li class="nav_item"><a href="./404.html" class="nav_link">Trợ giúp</a></li>
             </ul>
         </nav>
     </header>
