--- a/index.html
+++ b/index.html
@@ -77,88 +77,88 @@
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/anh-xe-pkl-ca-map-BMW-S1000RR.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">BMW-S1000RR</h3>
+                    <span class="bike_detail">2021 - Phân khối lớn</span>
+                    <span class="bike_price">100.000.000</span>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                </div>
+
+                <div class="bike_content">
+                    <img src="images/anh-xe-pkl-h2r.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">PKL-H2R</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/anh-xe-pkl-r15-v3.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">PKL-r15</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/anh-xe-pkl-Yamaha-R3.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">Yamaha-R3</h3>
+                    <span class="bike_detail">2021 - Phân khối lớn</span>
+                    <span class="bike_price">56.000.000</span>
+                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
+                </div>
+
+                <div class="bike_content">
+                    <img src="images/ApriliaRSV4.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">ApriliaRSV4</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/Benelli TRK502.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">Benelli TRK502</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/CBR 650R.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">CBR 650R</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/Cruiser 150cc – Suzuki GZ150-A.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">Cruiser 150</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/ducatimonster.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">ducatimonster</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/Royal Enfield.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">Royal Enfield</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
                 </div>
 
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
-                    <span class="bike_detail">2021 - Phân khối lớn</span>
-                    <span class="bike_price">50.000.000</span>
-                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
-                </div>
-
-                <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
-                    <span class="bike_detail">2021 - Phân khối lớn</span>
-                    <span class="bike_price">50.000.000</span>
-                    <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
-                </div>
-
-                <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
-                    <h3 class="bike_name">Duke 390</h3>
+                    <img src="images/Yamaha R15 V3.jpg" alt="" class="bike_img">
+                    <h3 class="bike_name">Yamaha r15 v3</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
                     <a href="./detail.html" class="button bike_button"><i class='bx bx-cart-alt'></i></a>
