--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav_item"><a href="./404.html" class="nav_link">Đơn hàng</a></li>
                     <li class="nav_item"><a href="./login.html" class="nav_link">Đăng nhập</a></li>
                     <li class="nav_item"><a href="./register.html" class="nav_link">Đăng kí</a></li>
-                    <li class="nav_item"><a href="./404.html" class="nav_link">Trợ giúp</a></li>
+                    <li class="nav_item"><a href="https://zalo.me/0393744165" class="nav_link">Trợ giúp</a></li>
                 </ul>
         </nav>
     </header>
@@ -69,7 +69,7 @@
         <!--========== BIKE ==========-->
             <div class="bike_container bd-grid bd-container">
                 <div class="bike_content">
-                    <img src="images/duke.jpg" alt="" class="bike_img">
+                    <img src="images/duke-home.jpg" alt="" class="bike_img">
                     <h3 class="bike_name">Duke 390</h3>
                     <span class="bike_detail">2021 - Phân khối lớn</span>
                     <span class="bike_price">50.000.000</span>
