--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 <li class="nav_item"><a href="./404.html" class="nav_link">Đơn hàng</a></li>
                 <li class="nav_item"><a href="./login.html" class="nav_link">Đăng nhập</a></li>
                 <li class="nav_item"><a href="./register.html" class="nav_link">Đăng kí</a></li>
-                <li class="nav_item"><a href="./404.html" class="nav_link">Trợ giúp</a></li>
+                <li class="nav_item"><a href="https://zalo.me/0393744165" class="nav_link">Trợ giúp</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,6 @@
     <main class="main-main">
         <!--========== LOGIN PAGE ==========-->
         <div class="login_container bd-container bd-grid">
-
             <form>
                 <h1 class="login_title">Đăng nhập</h1>
                 <label><b>Tài khoản</b></label>
