--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                 <li class="nav_item"><a href="./404.html" class="nav_link">Đơn hàng</a></li>
                 <li class="nav_item"><a href="./login.html" class="nav_link">Đăng nhập</a></li>
                 <li class="nav_item"><a href="./register.html" class="nav_link">Đăng kí</a></li>
-                <li class="nav_item"><a href="./404.html" class="nav_link">Trợ giúp</a></li>
+                <li class="nav_item"><a href="https://zalo.me/0393744165" class="nav_link">Trợ giúp</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,7 @@
                 <label><b>Nhập mật khẩu</b></label>
                 <input type="password" class="sbar ibar">
                 <br><br>
-                <label><b>Nhập lại mật khẩu</b></label>
+                <label><b>Nhập mật khẩu</b></label>
                 <input type="password" class="sbar ibar">
                 <br><br>
                 <a href="#" class="button">Đăng kí</a>
