--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <!--========== SCROLL TOP ==========-->
+    <!--========== SCROLL TOP ==========-->s
     <a href="#" class="scrolltop" id="scroll-top">
         <i class='bx bx-chevron-up scrolltop_icon'></i>
     </a>
